# Student-List

./: .gitignore  CMakeLists.txt  LICENSE  List.cpp  List.h  Node.cpp  Node.h  README.md  Student.cpp  Student.h  main.cpp
src/: List.h  Node.h  Student.cpp  Student.h  StudentList.cpp  StudentList.h  main.cpp
src/linked list/: List.h
